fixed button spacing

--- a/stupid.css
+++ b/stupid.css
@@ -44,7 +44,7 @@ header, footer {with:100%}
 .btn, button, [type=button], [type=submit] {padding:0.5em 1em !important; margin:0 0.5em 0.5em 0; line-height:2.4em; background-color:#26a69a; color:white}
 .btn:hover, button:hover, [type=button]:hover, [type=submit]:hover {box-shadow:0 0 10px #666; text-decoration:none; cursor:pointer}
 .btn.small, table .btn {padding:0.25em 0.5em !important; font-size:0.8em; line-height:1.5em}
-.btn.large {padding:1em 2em !important; font-size:1.2em; line-height:3em}
+.btn.large {padding:1em 2em !important; font-size:1.2em; line-height:4em}
 .btn.oval {border-radius:50%}
 
 /*** helpers ***/
